--- a/views/views.xml
+++ b/views/views.xml
@@ -5,6 +5,7 @@
     <record model="ir.ui.view" id="vschool.list">
       <field name="name">vschool list</field>
       <field name="model">vschool.student</field>
+      <field name="type">form</field>
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
         <field name="phone" position="after">
