--- a/views/views.xml
+++ b/views/views.xml
@@ -4,7 +4,7 @@
     
     <record model="ir.ui.view" id="vschool.list">
       <field name="name">vschool list</field>
-      <field name="model">res.partner</field>
+      <field name="model">vschool.student</field>
       
       <field name="inherit_id" ref="base.view_partner_form"/>
       <field name="arch" type="xml">
